[project]
name = "lang-graph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "grandalf>=0.8",
    "isort>=8.0.1",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.2.2",
]
